Fix T81057: PoseBone Constraints are displayed in Object Constraints tab

Own mistake in rB9dcae4eb17d7b.

We cannot use ED_object_constraint_active_list in uiTemplateConstraints
since it is dependent on mode (pose vs. object). Now get object
constraints directly when use_bone_constraints is false.

Note: unfortunately a derivate of this bug has made its way into 2.90.1

Maniphest Tasks: T81057

Differential Revision: https://developer.blender.org/D8989